<resources>
    <string name="app_name">Virtuální průvodce ekonomií</string>
    <string name="MarketDS">Trh</string>
    <string name="ProductionLimit">Hranice produkčních možností</string>
    <string name="IndifferentAnalysis">Indiferenční analýza</string>
    <string name="CostCurves">Nákladové křivky</string>
    <string name="PerfectMarket">Firma v dokonalé konkurenci</string>
    <string name="MonopolisticMarket">Firma v monopolistické konkurenci</string>
    <string name="Demand">Poptávka</string>
    <string name="IndividualDemand">Poptávka firmy</string>
    <string name="DemandDefault">Původní poptávka</string>
    <string name="PriceLevel">Cenová hladina</string>
    <string name="Price">Cena</string>
    <string name="SupplyDefault">Původní nabídka</string>
    <string name="Supply">Nabídka</string>
    <string name="TotalCost">Celkové náklady</string>
    <string name="MarginalCost">Mezní náklady</string>
    <string name="AverageCost">Průměrné náklady</string>
    <string name="TotalRevenue">Celkový příjem</string>
    <string name="MarginalRevenue">Mezní příjem</string>
    <string name="AverageRevenue">Průměrný příjem</string>
    <string name="Quantity">Množství</string>
    <string name="ProductionCapabilities">PPF</string>
    <string name="ProductionCapabilitiesDefault">Původní PPF</string>
    <string name="Taxes">Dane</string>
    <string name="Equilibrium">Rovnovážný bod/y</string>
    <string name="TotalUtility">Celkový užitek</string>
    <string name="AverageVariableCost">Průměrné variabilní náklady</string>
    <string name="BudgetLine">Rozpočtové omezení</string>
    <string name="IndifferentCurve">Indiferenční křivka</string>
    <string name="DemandLabel">D‘</string>
    <string name="DemandDefaultLabel">D</string>
    <string name="IndividualDemandLabel">d</string>
    <string name="SupplyDefaultLabel">S</string>
    <string name="SupplyLabel">S‘</string>
    <string name="PriceLevelLabel">P</string>
    <string name="PriceLabel">P</string>
    <string name="TotalCostLabel">TC</string>
    <string name="MarginalCostLabel">MC</string>
    <string name="AverageCostLabel">AC</string>
    <string name="TotalRevenueLabel">TRm</string>
    <string name="MarginalRevenueLabel">MR</string>
    <string name="AverageRevenueLabel">AR</string>
    <string name="QuantityLabel">Q</string>
    <string name="ProductionCapabilitiesLabel">PPF’</string>
    <string name="ProductionCapabilitiesDefaultLabel">PPF</string>
    <string name="TaxesLabel">Tx</string>
    <string name="EquilibriumLabel">E</string>
    <string name="TotalUtilityLabel">TU</string>
    <string name="AverageVariableCostLabel">AVC</string>
    <string name="BudgetLineLabel">BL</string>
    <string name="IndifferentCurveLabel">IC</string>
    <string name="and">a</string>
    <string name="indifferent_analysis_info_budget_line_title">Rozpočtové omezení</string>
    <string name="indifferent_analysis_info_budget_line">Rozpočtové omezení reprezentuje maximální možné kombinace statků, na které spotřebitel vydá celý svůj důchod. Kombinace statků pod rozpočtovým omezením jsou spotřebiteli dostupné. Na kombinace statků nad rozpočtovým omezením nemá dostatečný důchod.</string>
    <string name="indifferent_analysis_info_indifferent_curve_title">Indiferenční křivka</string>
    <string name="indifferent_analysis_info_indifferent_curve">    Indiferenční křivka znázorňuje kombinace dvou statků, které poskytují spotřebiteli stejný celkový užitek. Vyšší indiferenční křivka je spojena s vyšším celkovým užitkem. Nižší s nižším celkovým užitkem. Spotřebitel se snaží dosáhnout co nejvyšší indiferenční křivky, ale je limitován rozpočtovým omezením. Anglicky se nazývá indifference curve, a proto se často označuje IC.</string>
    <string name="indifferent_analysis_info_text_situation_1">Indiferenční křivka se nedotýká rozpočtového omezení. Na žádnou kombinaci statků na indiferenční křivce spotřebitel nemá dostatečný důchod.</string>
    <string name="indifferent_analysis_info_text_situation_2">Indiferenční křivka se dotýká s rozpočtovým omezením v jediném bodě. Tento bod určuje kombinaci statků, která přinese spotřebiteli nejvyšší možný užitek v při daném důchodu. Tato kombinace je tak optimální, protože neexistuje jiná kombinace statků, která by mu přinesla vyšší celkový užitek a zároveň na ni mohl se svým důchodem dosáhnout.</string>
    <string name="indifferent_analysis_info_text_situation_3">Indiferenční křivka se protíná s rozpočtovým omezením ve dvou bodech. Tyto body udávají dvě různé kombinace statků, které přinesou spotřebiteli stejný (ale nikoliv maximální možný) užitek a zároveň na ně vydal celý svůj důchod.</string>
    <string name="indifferent_analysis_info_text_2">IC se nikdy neprotínají.</string>
    <string name="indifferent_analysis_info_text_3_title">Změny rovnováhy</string>
    <string name="indifferent_analysis_info_text_3">Jestliže dojde k růstu důchodu spotřebitele, rozpočtové omezení roste. Spotřebitel si může koupit více kombinací dvou statků.</string>
    <string name="indifferent_analysis_info_text_4_title">Změny rovnováhy</string>
    <string name="indifferent_analysis_info_text_4">Při poklesu ceny jednoho statku může spotřebitel nakoupit větší množství tohoto statku, a rozpočtové omezení se posouvá pro tento statek dál od počátku.</string>
    <string name="indifferent_analysis_info_text_5_title">Rovnováha</string>
    <string name="indifferent_analysis_info_text_5">Nachází se v bodě dotyku rozpočtového omezení a indiferenční křivky</string>
    <string name="indifferent_analysis_info_text_situation_title">Situace na grafu</string>
    <string name="marketDS_info_text_1_title">Charakteristika</string>
    <string name="marketDS_info_text_1">Trh je v ekonomice prostor (může být i virtuální), kde dochází ke směně statků a služeb. Na trhu se setkávají nabízející, kteří chtějí směnit své statky za peníze, a poptávající, kteří za peníze (část svého důchodu) chtějí získat nějaké statky k uspokojení svých potřeb. Prodejci se snaží prodat za co nejvyšší cenu, zatímco kupující si přejí koupit za co možná nejnižší cenu, aby mohli maximalizovat svůj užitek.</string>
    <string name="marketDS_info_text_demand_title">Poptávka</string>
    <string name="marketDS_info_text_demand">Poptávka (značí se D, z anglického demand) je vztah, jež vyjadřuje závislost mezi poptávaným množstvím statku, které jsou kupující ochotni koupit při dané ceně.</string>
    <string name="marketDS_info_text_supply_title">Nabídka</string>
    <string name="marketDS_info_text_supply">Nabídka (značí se S, z anglického supply) je vztah vyjadřující, kolik jsou výrobci ochotni nabídnout statku při dané ceně.</string>
    <string name="marketDS_info_text_supply_change_title">Posun nabídky</string>
    <string name="marketDS_info_text_supply_change">Posun nabídkové křivky může vyvolat změna nákladů firem (tedy změna cen výrobních faktorů užívaných k výrobě statku), nebo technologický pokrok.</string>
    <string name="marketDS_info_text_demand_change_title">Posun poptávky</string>
    <string name="marketDS_info_text_demand_change"> Posun poptávkové křivky může způsobit změna nominálního důchodu spotřebitelů, změna preferencí spotřebitelů, změna ceny substitutu, nebo změna ceny komplementu. </string>
    <string name="production_limit_info_text_1_title">Charakteristika</string>
    <string name="production_limit_info_text_1">    Hranice výrobních možností (HVM) (anglicky: \"production-possibility frontier\" nebo-li PPF) vyjadřuje maximální možné kombinace dvou různých statků, které může ekonomika vyprodukovat při plném využití daných zdrojů a při dané technologii. Reprezentuje hranici mezi dosažitelnou a nedosažitelnou úrovní produkce.</string>
    <string name="production_limit_info_text_2_title">Tvar</string>
    <string name="production_limit_info_text_2">PPF je kombinace statků, které může maximálně ekonomika při svých celkově omezených zdrojích a technologiích vyrábět. Ve zjednodušeném znázornění jde o kombinace dvou statků. Hranice výrobních možností je funkcí klesající.</string>
    <string name="production_limit_info_text_3_title">Nedosažitelná úroveň produkce</string>
    <string name="production_limit_info_text_3">Všechny body nad křivkou představují nedostupné kombinace statků při daných výrobních faktorech a technologiích.</string>
    <string name="production_limit_info_text_4_title">Dosažitelná úroveň produkce</string>
    <string name="production_limit_info_text_4">Všechny body pod křivkou představují sice dostupné kombinace vyráběných statků, ale výrobní faktory, které ekonomika má k dispozici, nejsou užívány efektivně. Může dojít k navýšení produkce jednoho i druhého statku, aniž by bylo nutné omezit výrobu toho druhého.</string>
    <string name="production_limit_info_text_5_title">Posun</string>
    <string name="production_limit_info_text_5">K posunu křivky dochází nejčastěji při technologickém pokroku, ale i při růstu množství dostupných výrobních faktorů či jejich kvality.</string>
    <string name="perfect_market_firm_info_text_1_title">Dokonalý trh</string>
    <string name="perfect_market_firm_info_text_1">Dokonalý trh je takový trh, na kterém mají všichni kupující dokonalé informace o všech prodávajících a cenách, které nabízejí, při přechodu od jednoho prodávajícího k jinému mají nulové náklady a obchodovaný statek je homogenní. Důsledkem těchto podmínek je, že tržní cena bude odpovídat úrovni mezních nákladů a mezních příjmů firem.</string>
    <string name="perfect_market_firm_info_text_mc_title">Mezní náklady</string>
    <string name="perfect_market_firm_info_text_mc">Mezní náklady (z anglického marginal cost – MC) jsou náklady způsobné výrobou dodatečné jednotky výstupu. Udávají přírůstek celkových nákladů, pokud se produkce (výstup) zvýší o jednotku.</string>
    <string name="perfect_market_firm_info_text_ac_title">Průměrné náklady</string>
    <string name="perfect_market_firm_info_text_ac">Průměrné náklady (z anglického average cost - AC) jsou to celkové náklady (TC) dělené množstvím produkce (množství Q). Reprezentují, kolik v průměru musela firma ve formě nákladů obětovat na výrobu celého rozsahu produkce.</string>
    <string name="perfect_market_firm_info_text_avc_title">Průmerné variabilní náklady</string>
    <string name="perfect_market_firm_info_text_avc">Průměrné variabilní náklady (z anglického average variable cost - AVC) jsou nákladem vztaženým k variabilním vstupům do produkce statku. Jsou závislé na objemu výroby. Pro firmy jsou důležité zejména pro rozhodování o rozsahu výroby v krátkém období.</string>
    <string name="perfect_market_firm_info_text_8_title">Zisk</string>
    <string name="perfect_market_firm_info_text_8">Rozlišujeme mezi účetním a ekonomickým ziskem.</string>
    <string name="perfect_market_firm_info_text_9_title">Účetní zisk</string>
    <string name="perfect_market_firm_info_text_9">Účetní zisk = celkové příjmy – explicitní náklady (reálně a v účetnictví zachycené vynaložené náklady – např. mzdy pracovníků, platby za elektřinu atd.)</string>
    <string name="perfect_market_firm_info_text_10_title">Ekonomický zisk</string>
    <string name="perfect_market_firm_info_text_10">Ekonomický zisk = účetní zisk – implicitní náklady (náklady obětované příležitosti).</string>
    <string name="perfect_market_firm_info_text_11_title">Nabídka firmy v krátkém období</string>
    <string name="perfect_market_firm_info_text_11">V krátkém období může firma vyrábět se ztrátou.</string>
    <string name="signIn">Přihlásit se</string>
    <string name="signOut">Odhlásit se</string>
    <string name="register">Registrovat se</string>
    <string name="sendEmail">Kontaktovat autora</string>
    <string name="quizEndingTitle">Výsledek testu</string>
    <string name="quizEndingScore">Získaných bodů:</string>
    <string name="quizEndingBonus">Získán bonus:</string>
    <string name="quizEndingSum">Bodů v součtu</string>
</resources>