<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/quizEndindDialogTitle"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/quizEndingTitle"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/quizEndindDialogScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:id="@+id/quizEndindDialogScoreValueLogo"
            android:layout_width="28sp"
            android:layout_height="28sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_graph_pef_circle" />

        <TextView
            android:id="@+id/quizEndindDialogScoreValue"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/quizEndindDialogScoreValueLogo"
            android:gravity="right" />

        <TextView
            android:id="@+id/quizEndindDialogScoreTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/quizEndingScore" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quizEndindDialogBonusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:id="@+id/quizEndindDialogBonusValueLogo"
            android:layout_width="28sp"
            android:layout_height="28sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_graph_pef_circle" />

        <TextView
            android:id="@+id/quizEndindDialogBonusValue"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/quizEndindDialogBonusValueLogo"
            android:gravity="right" />

        <TextView
            android:id="@+id/quizEndindDialogBonusTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/quizEndingBonus" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quizEndindDialogScoreSumLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:id="@+id/quizEndindDialogScoreSumValueLogo"
            android:layout_width="28sp"
            android:layout_height="28sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_graph_pef_circle" />

        <TextView
            android:id="@+id/quizEndindDialogScoreSumValue"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/quizEndindDialogScoreSumValueLogo"
            android:gravity="right"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/quizEndindDialogScoreSumTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/quizEndingSum"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>


</LinearLayout>