<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.mendelu.tomas.graphpef.activities.MainActivity"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/podklad"
        android:scaleType = "centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/infoOnMainScreen"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_info_black_24dp"
            android:tint="@color/colorPrimary"
            android:background="@color/cardview_shadow_end_color"/>

        <RelativeLayout
            android:id="@+id/startAppLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="12dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signedLayout">
                <Button
                    android:id="@+id/startAppButton"
                    android:padding="12dp"
                    android:layout_alignParentStart="true"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/start_app" />
                <Button
                    android:id="@+id/signOutButton"
                    android:padding="12dp"
                    android:layout_below="@+id/startAppButton"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/signOut" />
                <Button
                    android:id="@+id/sendMailButton"
                    android:padding="12dp"
                    android:layout_below="@+id/startAppButton"
                    android:layout_alignParentRight="true"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sendEmail" />
            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signInLayout"
                android:visibility="invisible">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signInEmailLayout"
                    android:layout_marginTop="12dp">
                        <EditText
                            android:id="@+id/signInXname"
                            style="@android:style/Widget.Material.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="xJméno"
                            android:inputType="text"
                            android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signInPasswordLayout"
                    android:layout_below="@id/signInEmailLayout"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/signInPassword"
                        style="@android:style/Widget.Material.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:ellipsize="start"
                        android:hint="Heslo"
                        android:imeOptions="actionDone"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signInSubmitButton"
                    android:layout_below="@id/signInPasswordLayout"
                    android:layout_alignParentRight="true"
                    android:text="@string/signIn"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="10dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerSubmitButton"
                    android:layout_below="@id/signInPasswordLayout"
                    android:text="@string/register"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"/>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/appNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textColor="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:layout_above="@id/startAppLayout"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/appNameText"
            android:id="@+id/logosOnMainScreenLayout">

                <ImageView
                android:id="@+id/LogoMendeluBottom"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:padding="18dp"
                app:srcCompat="@drawable/logo_mendelu" />
            <ImageView
                android:id="@+id/LogoPefBottom"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="12dp"
                app:srcCompat="@drawable/logo_pef_official" />

            <ImageView
                android:id="@+id/graphPefLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_below="@id/LogoPefBottom"
                app:srcCompat="@drawable/logo_graph_pef_circle" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
